app/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector: #紐づけるアプリケーションのLabelsを指定します
    app: web
  clusterIP: None
